<resources>
    <!--GENERAL NOTE: E SURE TO DO A REFACTOR WHEN CHANGING STRING NAMES-->
    <!-- General strings-->
    <string name="app_name">Momenta</string>

    <!--Sort Dialog Strings-->
    <string name="sort_by">Sort by</string>
    <string name="order">Order</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="sort_dialog_date_created">Date Created</string>
    <string name="sort_dialog_dealine">Deadline</string>
    <string name="sort_dialog_name">Name</string>
    <string name="sort_dialog_last_modified">Last Modified</string>

    <!--Time Entry Dialog (Used for Goal and Time Spent entry) Strings-->
    <string name="timeentry_dialog_goal_title">What\'s your goal?</string>
    <string name="timeentry_dialog_timespent_title">How much time have you spent?</string>
    <string name="timeentry_dialog_hours_label">hours</string>
    <string name="timeentry_dialog_minutes_label">minutes</string>
    <string name="timeentry_dialog_hour_label">hour</string>
    <string name="timeentry_dialog_minute_label">minute</string>

    <!-- Text View strings-->
    <string name="H_string">H</string>
    <string name="M_string">M</string>

    <!--Task Actiivty -->
    <string name="delete_string">Delete</string>
    <string name="leave_team">Leave</string>
    <string name="discard_changes">Discard your changes?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="priority_spinner_title">Priority</string>
    <string-array name="Priorities">
        <item>Very Low</item>
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
        <item>Very High</item>
    </string-array>

    <!-- Log strings-->

    <!-- Button strings-->
    <string name="dialog_done">Done</string>
    <string name="dialog_ok" translatable="false">Ok</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_hour_string">00</string>
    <string name="activity_string">Activity</string>
    <string name="goal_string">Goal</string>

    <!-- Settings strings-->
    <string name="interval_time_title">Interval Time</string>
    <string name="interval_time_summary">Remind me every</string>
    <string name="interval_time_summary_hours">hours</string>
    <string name="interval_time_summary_minutes"> minutes</string>
    <string name="interval_time_summary_never_remind">Never remind me</string>
    <string name="version_name_title">Version</string>
    <string name="settings_about">About</string>
    <string name="settings_notification">Notifications</string>
    <string name="start_time_title">Start Time</string>
    <string name="end_time_title">End Time</string>
    <string name="settings_integrations">Integrations</string>
    <string name="integration_switch_title">Integrate with Google Calendar</string>
    <string name="integration_switch_summary">Create events in your calendar after logging your time</string>

    <!-- EditText strings-->
    <string name="new_activity_hint"><i>Go to the gym...</i></string>

    <!-- Menu strings-->
    <string name="action_settings">Settings</string>

    <!-- Screen take over activity strings-->
    <string name="title_activity_screen_take_over">ScreenTakeOverActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="log_your_progess">Log your progess!</string>
    <string name="screen_take_over_m">M</string>

    <!-- Demo/Sample strings-->
    <string name="dummy_button">Go</string>
    <string name="later">Later</string>
    <string name="sampleQuote">\"It does not matter how slowly you go as long as you do not stop.\"</string>
    <string name="quoteCredit">- Confucius</string>
    <string name="dummy_content">DUMMY CONTENT</string>
    <string name="deadline_string">Deadline</string>
    <string name="priority_string">Priority</string>
    <string name="timespent_string">Add time spent</string>
    <string name="goal_icon_content_description">Icon for Goal</string>
    <string name="deadline_icon_content_description">Deadline Icon</string>
    <string name="priority_icon_content_description">Priority Icon</string>

    <!-- Strings related to login -->
    <string name="action_signout">Sign Out</string>
    <string name="toast_no_name_activity_added">Please enter an activity name</string>
    <string name="toast_enter_goal">Please enter a goal</string>

    <!-- Strings related to the Select tasks to add time towards Screen !-->
    <string name="add_item_string">Add New Task</string>
    <string name="select_tasks_to_add_time_to_title">Add time to…</string>
    <string name="select_tasks_no_tasks_selected">No task(s) selected</string>
    <string name="select_tasks_cannot_divide_tasks">Cannot divide tasks evenly within time interval</string>

    <!-- Strings related to the Add time to task screen !-->
    <string name="add_time_to_task_title1">How much time did</string>
    <string name="add_time_to_task_title2">you put towards</string>
    <string name="no_tasks_available">Seems like you don\'t have any activities</string>
    <string name="dummy_button_add_new_task">Add a new activity</string>
    <string name="add_time_to_task_minutes"> m </string>
    <string name="add_time_to_task_hours"> h </string>
    <string name="add_time_to_task_min">0m</string>
    <string name="add_time_to_task_next">Next</string>
    <string name="add_time_to_task_done">Done</string>
    <string name="spent_time_already">Spent time already?</string>

    <!--String related to New Task screen-->
    <string name="new_task_title">Add a goal</string>
    <string name="new_task_submit_button">D O N E</string>
    <string name="welcome_to_momenta">Welcome To Momenta</string>
    <string name="loading">Loading</string>

    <!--Trends Strings-->
    <string-array name="trends_spinner">
        <item>Past Week</item>
        <item>Past Month</item>
    </string-array>
    <string name="time_in_minutes">Time in minutes</string>

    <!-- Awards titles and descriptions -->
    <string name="award_commited_title">Committed</string>
    <string name="award_neophyte_title">Neophyte</string>
    <string name="award_trend_setter_title">Trend Setter</string>
    <string name="award_multi_tasker_title">Multi-Tasker</string>
    <string name="award_productive_title">Productive</string>
    <string name="award_perfectionnist_title">Perfectionist</string>
    <string name="award_ponctual_title">Punctual</string>

    <string name="award_commited_desc_1">Logged time towards an activity you previously committed to </string>
    <string name="award_neophyte_desc_1">Logged time for the first time towards an activity </string>
    <string name="award_trend_setter_desc_1">Completed 5 hours towards a productive activity </string>
    <string name="award_multi_tasker_desc_1">Log time in </string>
    <string name="award_productive_desc_1">Successfully log time towards an activity after seeing the notification </string>
    <string name="award_perfectionnist_desc_1">Spend more than </string>
    <string name="award_ponctual_desc_1">Achieve time goal before deadline on </string>

    <string name="award_multi_tasker_desc_2">different activities</string>
    <string name="award_productive_desc_2">times</string>
    <string name="award_perfectionnist_desc_2">hours towards an activity</string>
    <string name="award_ponctual_desc_2">activities</string>

    <!--Sign in credentials for Integration testing with Firebase-->

    <!--Dashboard cards strings-->
    <string name="dash_latest_tasks_card_title">Latest tasks worked on</string>
    <string name="dash_goals_progress_card_title">Goal progress</string>
    <string name="dash_time_left_card_title">Total time left to complete</string>
    <string name="dash_trends_card_title">Overall productivity trend</string>
    <string name="timespent_string2">Time Spent:</string>
    <string name="goal_string2">Goal:</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>

    <!--Integration Strings-->
    <string name="created_event_string">Created event in your Calendar</string>
    <string name="invite_friends">Invite friends</string>
    <string name="invite_title">Invite</string>
    <string name="share_add_people">Add People</string>
    <string name="enter_valid_email">" is not a valid email address"</string>
    <string name="team_members_text">Team members</string>
    <string name="share_by">by</string>
    <string name="share_owner">Owner</string>
    <string name="title_share_activity">Add Friends</string>
    <string name="calendar_spent">"Spent "</string>
    <string name="calendar_on">" on "</string>
    <string name="to_use_momenta">" to use Momenta?"</string>
    <string name="others_to_use_momenta"><![CDATA[" & others to use Momenta?"]]></string>

    <string name="add_time_task_toast_no_time_remaining">Not enough time left for remaining tasks</string>
    <string name="add_time_task_toast_value_required">Must add a time value to the task</string>

    <!--Empty State Strings-->
    <string name="empty_state_no_goals">You have no goals yet.</string>
    <string name="empty_state_tap_plus_sign">Tap the plus sign to get started.</string>
    <string name="goals_icon_content_description">Goals Icon</string>invitation_message

    <string name="invitation_title">Hey, checkout Momenta.</string>
    <string name="invitation_message">No seriously, download momenta!</string>
    <string name="invitation_cta">Call to action text.</string>
    <string name="sample_deadline_string" />
    <string name="tasks_for_the_day">Tasks for the day</string>
    <string name="no_taks_due_today">No taks due today</string>
    <string name="sort_dialog_priority">Priority</string>
    <string name="overdue_section">OVERDUE</string>
    <string name="tomorrow_section">TOMORROW</string>
    <string name="next7days_section">NEXT 7 DAYS</string>
    <string name="later_section">LATER</string>
    <string name="ongoing_section">ONGOING</string>
    <string name="tasks_section">ACTIVITIES</string>
    <string name="very_low_section">VERY LOW</string>
    <string name="low_section">LOW</string>
    <string name="medium_section">MEDIUM</string>
    <string name="high_section">HIGH</string>
    <string name="very_high_section">VERY HIGH</string>
    <string name="completed_section">COMPLETED</string>
    <string name="today_section">TODAY</string>
    <!-- All quotes go here. Will be chosen randomly from the popup screen-->
    <string-array name="quotes">
        <item>1Put your heart, mind, and soul into even your smallest acts. This is the secret of success.</item>
        <item>2Keep you face always toward the sunshine - and shadows will fall behind you.</item>
        <item>3Nothing is impossible, the word itself says im possible!</item>
        <item>4It does not matter how slowly you go as long as you do not stop.</item>
    </string-array>

    <!-- Make sure you add the names in the correct order as the quotes -->
    <string-array name="quoteCredits">
        <item>-Swami Sivananda </item>
        <item>-Walt Whitman </item>
        <item>-Audrey Hepburn </item>
        <item>-Confucius </item>
    </string-array>


</resources>
