...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_string"
            android:textColor="@color/primary_text"
            android:textSize="18sp"/>
        <EditText
            android:id="@+id/newtask_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/SecondaryEditTextTheme"
            android:hint="@string/new_activity_hint"
            android:textColorHint="@color/hint_text"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:maxLength="64"
            android:inputType="textCapSentences" />
    </LinearLayout>

     <RelativeLayout
        android:id="@+id/newtask_goal_layout"
        android:layout_width="match_parent"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:onClick="goalOnClick"
...
            android:layout_below="@+id/newtask_goal_title" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/newtask_deadline_layout"
        android:layout_width="match_parent"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_below="@id/newtask_goal_layout"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
...
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/newtask_timespent_image"
            android:layout_below="@+id/newtask_timespent_title" />

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/add_task_done_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="doneOnClick"
        android:layout_alignParentBottom="true"
        >
...
