<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <android.support.design.widget.TabLayout
        android:id="@+id/sliding_tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabGravity="fill"
        app:tabMode="fixed" />

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:background="@color/colorPrimary" />
    </LinearLayout>
    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/fab_menu"
        android:clickable="false"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        fab:menu_backgroundColor="@color/transparent_white"
        fab:menu_fab_label="Add a new goal"
        fab:menu_colorNormal="@color/colorPrimaryDark"
        fab:menu_colorPressed="@color/colorAccent"
        fab:fab_colorRipple="#99FFFFFF"
        fab:fab_showShadow="true"
        fab:menu_labels_colorNormal="#333333"
        fab:menu_labels_colorPressed="#444444"
        fab:menu_labels_colorRipple="#66FFFFFF"
        fab:menu_labels_showShadow="true"
        fab:menu_labels_maxLines="-1"
        fab:menu_labels_position="left"
        fab:menu_openDirection="up"
        fab:fab_shadowColor="#66000000"
        fab:menu_labels_ellipsize="end"
        fab:menu_labels_singleLine="true">

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/fab_deadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        fab:fab_label="Deadline"
        fab:fab_colorNormal="@color/colorPrimaryDark"
        fab:fab_colorPressed="@color/colorAccent"
        android:src="@drawable/ic_date_range_white_24dp"
        fab:fab_size="mini"/>

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/fab_todo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        fab:fab_label="To Do"
        fab:fab_colorNormal="@color/colorPrimaryDark"
        fab:fab_colorPressed="@color/colorAccent"
        android:src="@drawable/ic_check_circle_white_24dp"
        fab:fab_size="mini"/>

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/fab_ongoing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        fab:fab_label="Ongoing"
        fab:fab_colorNormal="@color/colorPrimaryDark"
        fab:fab_colorPressed="@color/colorAccent"
        android:src="@drawable/ic_trending_up_white_24dp"
        fab:fab_size="mini"/>

    </com.github.clans.fab.FloatingActionMenu>


</android.support.design.widget.CoordinatorLayout>