<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="7dp"
    android:layout_marginBottom="7dp"
    android:gravity="center_horizontal">

            <EditText
                android:id="@+id/pref_hour_textview"
                android:layout_width="@dimen/time_dialog_edit_text_width"
                android:layout_height="wrap_content"
                android:text="@string/dialog_hour_string"
                android:inputType="number"
                android:gravity="end"
                android:selectAllOnFocus="true"
                android:maxLength="2"
                android:textSize="@dimen/dialog_time_text_size"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:text="@string/H_string"/>
            <EditText
                android:id="@+id/pref_minute_textview"
                android:layout_width="@dimen/time_dialog_edit_text_width"
                android:layout_height="wrap_content"
                android:text="@string/dialog_hour_string"
                android:inputType="number"
                android:maxLength="2"
                android:selectAllOnFocus="true"
                android:gravity="end"
                android:textSize="@dimen/dialog_time_text_size"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:text="@string/M_string"/>

</LinearLayout>