...
                    android:layout_height="wrap_content"
                    android:padding="10dp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_button"
            android:visibility="invisible"/>
    </LinearLayout>
</ScrollView>
